k8s/deploy-cli.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: gprc-node-client
  name: grpc-node-client
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-node-client
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grpc-node-client
    spec:
      serviceAccountName: grpc-node-client-sa
      containers:
      - image: cloudthatdevops/grpc-node-client
        name: grpc-node-client
