k8s/deploy-srv.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: gprc-node-server
  name: grpc-node-server
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-node-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grpc-node-server
    spec:
      serviceAccountName: grpc-node-server-sa
      containers:
      - image: cloudthatdevops/grpc-node-server
        name: grpc-node-server
