k8s/greeting-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-svc
  namespace: default
spec:
  ports:
  - name: grpc-srv-port
    port: 50050
    protocol: TCP
    targetPort: 50051
  selector:
    app: grpc-node-server
  type: ClusterIP
