k8s/greeting-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeting-vs
spec:
  hosts:
    - greeting-svc
  http:
  - route:
    - destination:
        host: greeting-svc
